@@ -688,6 +688,32 @@ evdev_is_extkbd_white(unsigned short *id)
   return 0;
 }
 
+/* Apple external USB mini keyboard, aluminium */
+static int
+evdev_is_extkbd_mini_alu(unsigned short *id)
+{
+  unsigned short product = id[ID_PRODUCT];
+
+  if (id[ID_BUS] != BUS_USB)
+    return 0;
+
+  if (id[ID_VENDOR] != USB_VENDOR_ID_APPLE)
+    return 0;
+
+  if ((product == USB_PRODUCT_ID_APPLE_EXTKBD_MINI_ALU_ANSI)
+      || (product == USB_PRODUCT_ID_APPLE_EXTKBD_MINI_ALU_ISO)
+      || (product == USB_PRODUCT_ID_APPLE_EXTKBD_MINI_ALU_JIS))
+    {
+      logdebug(" -> External Apple USB mini keyboard (aluminium)\n");
+
+      kbd_set_fnmode();
+
+      return 1;
+    }
+
+  return 0;
+}
+
 /* Apple external USB keyboard, aluminium */
 static int
 evdev_is_extkbd_alu(unsigned short *id)
@@ -745,6 +771,7 @@ static int
 evdev_is_extkbd(unsigned short *id)
 {
   return (evdev_is_extkbd_white(id)
+	  || evdev_is_extkbd_mini_alu(id)
 	  || evdev_is_extkbd_alu(id)
 	  || evdev_is_extkbd_alu_wl(id));
 }
